fixed sidebar overflows

--- a/src/App.css
+++ b/src/App.css
@@ -133,9 +133,9 @@ body {
 
 .x-icon {
   color: rgb(205, 196, 206);
-  position: absolute;
-  left: 240px;
+  position: relative;
   display: none;
+  left: 25px;
 }
 
 .x-icon:hover {
@@ -155,11 +155,18 @@ body {
 .profile-icon {
   background-color: rgb(164, 165, 83);
   height: 20px;
-  width: 20px;
+  min-width: 20px;
   display: grid;
   place-content: center;
   border-radius: 3px;
   color: white;
+}
+
+.cut-text { 
+  text-overflow: ellipsis;
+  overflow: hidden; 
+  width: 260px; 
+  white-space: nowrap;
 }
 
 .chat-container {
